# secretagent

./: .gitignore  CHANGES.md  CLAUDE.md  Makefile  TODO.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: HOWTO.md
benchmarks/designbench/: expt.py  ptools.py
benchmarks/designbench/conf/: conf.yaml
benchmarks/medagentbench/: Makefile  expt.py  medagent_loop.py  ptools.py
benchmarks/medagentbench/conf/: baseline.yaml  faithful.yaml  pipeline.yaml  pot.yaml  simulate.yaml
benchmarks/medagentbench/llm_cache/: .secretagent.llm_util._llm_impl
benchmarks/medagentbench/prompt_templates/: codeact.txt
benchmarks/medcalc/: ptools.py
benchmarks/medcalc/conf/: baseline.yaml  distilled.yaml  pipeline.yaml  pot.yaml  simulate.yaml
benchmarks/medcalc/docs/: L0-baseline-prompt.txt  L1-simulate-prompt.txt  L2-distilled-paths.txt  L4-pipeline-prompts.txt  agentproject-comparison.txt
benchmarks/musr/: Makefile  expt.py  ptools_object.py
benchmarks/natural_plan/: expt.py
benchmarks/rulearena/: Makefile  expt.py  ptools.py
benchmarks/rulearena/calculators/: airline.py  tax.py
benchmarks/rulearena/conf/: conf.yaml
benchmarks/sports_understanding/: Makefile  expt.py  ptools.py
benchmarks/tabmwp/: expt.py
docs/: CHANGES.md  TODO.md
examples/: quickstart.py  sports_understanding_pot.py  sports_understanding_pydantic.py
src/secretagent/: core.py  evaluate.py  implement_core.py  implement_ptp.py  implement_pydantic.py  implement_selfconsistency.py  implement_vlm.py  llm_util.py  optimize.py  savefile.py
tests/: test_core.py  test_learn_baselines.py
(+18 files in other folders)
